arreglos casi finales, makefile hecho y warnings arreglados

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "Disabled",
     "files.associations": {
-        "mer2": "c"
+        "mer2": "c",
+        "juego.h": "c"
     }
 }
