[el ficha leo y la ficha pilar] arreglos promedios, buffers y verificaciones

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "C_Cpp.errorSquiggles": "Disabled",
     "files.associations": {
         "mer2": "c",
-        "juego.h": "c"
+        "juego.h": "c",
+        "hijo.h": "c"
     }
 }
